--- a/ProdValue/style.css
+++ b/ProdValue/style.css
@@ -24,6 +24,8 @@ div{
     margin-top: 0.7rem;
     padding: 1.2rem;
     padding-bottom: 0.7rem;
+    padding-left: none;
+    padding-right: none;
     border: 2px solid darkslategray;
     border-radius: 10px;
     background-color: white;
@@ -33,7 +35,7 @@ div{
 label{
     margin-top: 1rem;
     margin-bottom: 0.5rem;
-    font-size: 0.8rem;
+    font-size: 1rem;
     color: darkslategray;
     font-weight: bold;
 }
@@ -44,10 +46,12 @@ span{
 
 input{
     margin-top: 0.5rem;
-    width: 100%;
+    width: 60%;
     margin-bottom: 1rem;
     padding-top: 1%;
     padding-bottom: 1%;
+    padding-left: 5%;
+    padding-right: 5%;
     border: 1px solid darkslategray;
     border-radius: 5px;
     text-align: center;
@@ -67,9 +71,9 @@ button{
     padding-right: 0.2rem;
 }
 
-p{
+h2{
     margin-top: 1rem;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
 }
 
 
@@ -83,20 +87,104 @@ img{
 }
 
 footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: fixed;
     bottom: 0;
     width: 100%;
     text-align: center;
-    font-size: 0.8rem;
-    padding: auto;
+    font-size: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     background-color: darkslategray;
-    color: aliceblue;
+    gap: 1rem;
 }
 
 a{
-	font-size: 0.8rem;
-	cursor:pointer;
-	color:white;
-	text-decoration: none;
-	margin-right: 1rem;
+    font-size: 1rem;
+    cursor: pointer;
+    color: aliceblue;
+    text-decoration: none;
+    flex-direction: row;
+}
+
+@media (min-width: 1024px) {
+    
+}
+
+@media (min-width: 768px) {
+    header{
+        margin-top: 3.5rem;
+        font-size: 2.5rem;
+    }
+
+    h1{
+	    margin-top: 1.5rem;
+	    font-size: 1.5rem;
+    }
+
+    div{
+        margin-top: 1rem;
+        padding: 1.5rem;
+        padding-bottom: 1.5rem;
+    }
+
+    label{
+        margin-top: 1.5rem;
+        margin-bottom:0.8rem;
+        font-size: 1.3rem;
+    }
+
+    input{
+        margin-top: 1rem;
+        width: 70%;
+        margin-bottom: 2rem;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    }
+
+    button{
+        padding: 0.8rem;
+        padding-top: 0.8rem;
+        padding-bottom: 0.8rem;
+        padding-left: 0.8rem;
+        padding-right: 0.8rem;
+        font-size: 1.2rem;
+    }
+
+    h2{
+        margin-top: 1rem;
+        font-size: 1.5rem;  
+    }
+
+    img{
+	    margin-top: 0.4rem;
+        width: 20rem;
+        max-width: 600px;
+        height: auto;
+    }
+
+    footer{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        text-align: center;
+        font-size: 1rem;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
+        background-color: darkslategray;
+        flex-direction:row;
+        gap: 5rem;
+    }
+
+    p, a{
+	    font-size: 1.2rem;
+	    cursor:pointer;
+	    color:white;
+	    text-decoration: none;
+    }
 }
